--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">UniQ</string>
+    <string name="title_activity_questions">QuestionsActivity</string>
 </resources>
