--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">UniQ</string>
     <string name="title_activity_questions">QuestionsActivity</string>
+    <string name="title_activity_answers">AnswersActivity</string>
 </resources>
